initial page setup

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div class="container">
+    <div class="sidebar">
+
+    </div>
+
     
+    <div class="header">
+
+    </div>
+
+
+    <div class="mainContent">
+
+    </div>
+</div>
 </body>
 </html>
