add sidebar assets, initial sidebar layout

--- a/index.html
+++ b/index.html
@@ -6,11 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>~~Grid-Based~~ Admin Dashboard</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Roboto">
 </head>
 <body>
 <div class="container">
     <div class="sidebar">
-
+        <div class="sidebarTitle"><img src="dashboard.svg"><h2>Dashboard</h2></div>
+        <ul class="sidebarUL1">            
+            <img src="home.svg"><li>Home</li>
+            <img src="badge.svg"><li>Profile</li>
+            <img src="forum.svg"><li>Messages</li>
+            <img src="history.svg"><li>History</li>
+            <img src="task.svg"><li>Tasks</li>
+            <img src="groups.svg"><li>Communities</li>
+        </ul>
+        <ul class="sidebarUL2">
+            <img src="settings.svg"><li>Settings</li>
+            <img src="help.svg"><li>Support</li>
+            <img src="security.svg"><li>Privacy</li>
+        </ul>
     </div>
 
     
