--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
 <div class="container">
     <div class="sidebar">
+
+        <div class="sidebarContents">
         <div class="sidebarTitle"><img src="dashboard.svg"><h2>Dashboard</h2></div>
         <ul class="sidebarUL1">            
             <img src="home.svg"><li>Home</li>
@@ -26,6 +28,7 @@
             <img src="help.svg"><li>Support</li>
             <img src="security.svg"><li>Privacy</li>
         </ul>
+        </div>
     </div>
 
     
