cleanup unused code, remove sidebar container

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="sidebar">
 
-        <div class="sidebarContents">
+        <!-- <div class="sidebarContents"> -->
         <div class="sidebarTitle"><img src="dashboard.svg"><h2>Dashboard</h2></div>
         <ul class="sidebarUL1">            
             <img src="home.svg"><li>Home</li>
@@ -28,7 +28,7 @@
             <img src="help.svg"><li>Support</li>
             <img src="security.svg"><li>Privacy</li>
         </ul>
-        </div>
+        <!-- </div> -->
     </div>
 
     
