--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="sidebar">
 
         <!-- <div class="sidebarContents"> -->
-        <div class="sidebarTitle"><img src="dashboard.svg"><h2>Dashboard</h2></div>
+        <div class="sidebarTitle"><img src="dashboard.svg"><p><strong>Dashboard</strong></p></div>
         <ul class="sidebarUL1">            
             <img src="home.svg"><li>Home</li>
             <img src="badge.svg"><li>Profile</li>
