initial responsive commit

--- a/index.html
+++ b/index.html
@@ -38,7 +38,87 @@
 
 
     <div class="mainContent">
-        <img src="dashboard-project.png">
+        <section class="cards">
+            <div class="card">
+                <h5>Card Title</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+            </div>
+            <div class="card">
+                <h5>Card Title</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+            </div>
+            <div class="card">
+                <h5>Card Title</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+            </div>
+            <div class="card">
+                <h5>Card Title</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+            </div>
+            <div class="card">
+                <h5>Card Title</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+            </div>
+            <div class="card">
+                <h5>Card Title</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+            </div>
+            <div class="card">
+                <h5>Card Title</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+            </div>
+            <div class="card">
+                <h5>Card Title</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+            </div>
+            <div class="card">
+                <h5>Card Title</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+            </div>
+            <div class="card">
+                <h5>Card Title</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+            </div>
+            <div class="card">
+                <h5>Card Title</h5>
+                <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, vero. Cum dolorum quia perferendis mollitia illo exercitationem, voluptates asperiores, ea distinctio eos neque illum tempora explicabo. Recusandae cupiditate nisi placeat.</p>
+            </div>
+            <div class="card">
+                <h5>Card Title</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+            </div>
+        </section>
+        <!-- <img src="dashboard-project.png"> -->
+        <div class="mainRight">
+            <div id="announcements">
+            <div>
+                <h5>Announcing</h5>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A repellat, amet aspernatur iste eveniet tempora dolorum dolore repellendus similique adipisci ipsum expedita libero, voluptas labore doloribus excepturi est totam? Inventore!</p>
+            </div>
+            <div>
+                <h5>Announcing</h5>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A repellat, amet aspernatur iste eveniet tempora dolorum dolore repellendus similique adipisci ipsum expedita libero, voluptas labore doloribus excepturi est totam? Inventore!</p>
+            </div>
+            <div>
+                <h5>Announcing</h5>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A repellat, amet aspernatur iste eveniet tempora dolorum dolore repellendus similique adipisci ipsum expedita libero, voluptas labore doloribus excepturi est totam? Inventore!</p>
+            </div>
+            </div>
+            <div id="trending">
+                <div>
+                    <h5>Trend</h5>
+                    <p>some real shit</p>
+                </div>
+                <div>
+                    <h5>Trend</h5>
+                    <p>some real shit</p>
+                </div>
+                <div>
+                    <h5>Trend</h5>
+                    <p>some real shit</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 </body>
