add spacing to right column

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     
     <div class="header">
-
+        
     </div>
 
 
@@ -87,8 +87,7 @@
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
             </div>
-        </section>
-        <!-- <img src="dashboard-project.png"> -->
+        </section><!-- END OF SECTION -->
         <div class="mainRight">
             <div id="announcements">
             <div>
@@ -118,8 +117,9 @@
                     <p>some real shit</p>
                 </div>
             </div>
-        </div>
-    </div>
+        </div><!-- END OF MAINRIGHT-->
+
+    </div><!-- END OF MAINCONTENT-->
 </div>
 </body>
 </html>
