add header layout, add icons

--- a/index.html
+++ b/index.html
@@ -33,63 +33,170 @@
 
     
     <div class="header">
-        
+        <div class="head1">
+            <form action=#>
+                <button type="submit"><img src="search.svg" alt="search icon button"></button>
+                <input type="text" placeholder="Search..." name="search">
+              </form>
+        </div>
+        <div class="head2">
+            <img src="notification.svg" alt="notification icon">
+            <img src="tsalogo.gif" alt="profile icon" width="50rem">
+            <h5>TSA Marine</h5>
+        </div>
+        <div class="head3">
+            <img src="tsalogo.gif" alt="profile icon" width="80rem">
+            <h5>TSA Marine</h5><p> (@ihatekharaa)</p>
+        </div>
+        <div class="head4">
+            <button type="button">New</button>
+            <button type="button">Upload</button>
+            <button type="button">Share</button>
+        </div>
     </div>
 
 
     <div class="mainContent">
+
         <section class="cards">
+
             <div class="card">
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+                <div class="cardIcons">
+                    <img src="checkcircle.svg" alt="complete task icon">
+                    <img src="heart.svg" alt="favorite icon">
+                    <img src="share.svg" alt="share icon">
+                </div>
             </div>
+
+
             <div class="card">
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+                <div class="cardIcons">
+                    <img src="checkcircle.svg" alt="complete task icon">
+                    <img src="heart.svg" alt="favorite icon">
+                    <img src="share.svg" alt="share icon">
+                </div>
             </div>
+
+
             <div class="card">
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+                <div class="cardIcons">
+                    <img src="checkcircle.svg" alt="complete task icon">
+                    <img src="heart.svg" alt="favorite icon">
+                    <img src="share.svg" alt="share icon">
+                </div>
             </div>
+
+
             <div class="card">
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+                <div class="cardIcons">
+                    <img src="checkcircle.svg" alt="complete task icon">
+                    <img src="heart.svg" alt="favorite icon">
+                    <img src="share.svg" alt="share icon">
+                </div>
             </div>
+
+
             <div class="card">
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+                <div class="cardIcons">
+                    <img src="checkcircle.svg" alt="complete task icon">
+                    <img src="heart.svg" alt="favorite icon">
+                    <img src="share.svg" alt="share icon">
+                </div>
             </div>
+
+
             <div class="card">
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+                <div class="cardIcons">
+                    <img src="checkcircle.svg" alt="complete task icon">
+                    <img src="heart.svg" alt="favorite icon">
+                    <img src="share.svg" alt="share icon">
+                </div>
             </div>
+
+
             <div class="card">
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+                <div class="cardIcons">
+                    <img src="checkcircle.svg" alt="complete task icon">
+                    <img src="heart.svg" alt="favorite icon">
+                    <img src="share.svg" alt="share icon">
+                </div>
             </div>
+
+
             <div class="card">
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+                <div class="cardIcons">
+                    <img src="checkcircle.svg" alt="complete task icon">
+                    <img src="heart.svg" alt="favorite icon">
+                    <img src="share.svg" alt="share icon">
+                </div>
             </div>
+
+
             <div class="card">
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+                <div class="cardIcons">
+                    <img src="checkcircle.svg" alt="complete task icon">
+                    <img src="heart.svg" alt="favorite icon">
+                    <img src="share.svg" alt="share icon">
+                </div>
             </div>
+
+
             <div class="card">
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+                <div class="cardIcons">
+                    <img src="checkcircle.svg" alt="complete task icon">
+                    <img src="heart.svg" alt="favorite icon">
+                    <img src="share.svg" alt="share icon">
+                </div>
             </div>
+
+
             <div class="card">
                 <h5>Card Title</h5>
                 <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, vero. Cum dolorum quia perferendis mollitia illo exercitationem, voluptates asperiores, ea distinctio eos neque illum tempora explicabo. Recusandae cupiditate nisi placeat.</p>
+                <div class="cardIcons">
+                    <img src="checkcircle.svg" alt="complete task icon">
+                    <img src="heart.svg" alt="favorite icon">
+                    <img src="share.svg" alt="share icon">
+                </div>
             </div>
+
+
             <div class="card">
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
+                <div class="cardIcons">
+                    <img src="checkcircle.svg" alt="complete task icon">
+                    <img src="heart.svg" alt="favorite icon">
+                    <img src="share.svg" alt="share icon">
+                </div>
             </div>
+
+
         </section><!-- END OF SECTION -->
+
+
         <div class="mainRight">
-            <div id="announcements">
+            <div id="announcements" class="card">
             <div>
                 <h5>Announcing</h5>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A repellat, amet aspernatur iste eveniet tempora dolorum dolore repellendus similique adipisci ipsum expedita libero, voluptas labore doloribus excepturi est totam? Inventore!</p>
@@ -103,7 +210,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A repellat, amet aspernatur iste eveniet tempora dolorum dolore repellendus similique adipisci ipsum expedita libero, voluptas labore doloribus excepturi est totam? Inventore!</p>
             </div>
             </div>
-            <div id="trending">
+            <div id="trending" class="card">
                 <div>
                     <h5>Trend</h5>
                     <p>some real shit</p>
