header scaffolding update

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="head3">
             <img src="tsalogo.gif" alt="profile icon" width="80rem">
-            <h5>TSA Marine</h5><p> (@ihatekharaa)</p>
+            <p><strong style="font-size: x-large;">TSA Marine</strong> (@ihatekharaa)</p>
         </div>
         <div class="head4">
             <button type="button">New</button>
