add header fixed width

--- a/index.html
+++ b/index.html
@@ -195,15 +195,17 @@
         </section><!-- END OF SECTION -->
 
 
-        <div class="mainRight">
+        <div class="mainRightDiv">
             <div id="announcements" class="card">
             <div>
                 <h5>Announcing</h5>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A repellat, amet aspernatur iste eveniet tempora dolorum dolore repellendus similique adipisci ipsum expedita libero, voluptas labore doloribus excepturi est totam? Inventore!</p>
+                <hr>
             </div>
             <div>
                 <h5>Announcing</h5>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A repellat, amet aspernatur iste eveniet tempora dolorum dolore repellendus similique adipisci ipsum expedita libero, voluptas labore doloribus excepturi est totam? Inventore!</p>
+                <hr>
             </div>
             <div>
                 <h5>Announcing</h5>
@@ -214,10 +216,12 @@
                 <div>
                     <h5>Trend</h5>
                     <p>some real shit</p>
+                    <hr>
                 </div>
                 <div>
                     <h5>Trend</h5>
                     <p>some real shit</p>
+                    <hr>
                 </div>
                 <div>
                     <h5>Trend</h5>
