finalize header sizing

--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
         </div>
         <div class="head2">
             <img src="notification.svg" alt="notification icon">
-            <img src="tsalogo.gif" alt="profile icon" width="50rem">
-            <h5>TSA Marine</h5>
+            <img src="bigboss.jpg" alt="profile icon" width="50rem">
+            <h5>Ricky Reels</h5>
         </div>
         <div class="head3">
-            <img src="tsalogo.gif" alt="profile icon" width="80rem">
-            <p><strong style="font-size: x-large;">TSA Marine</strong> (@ihatekharaa)</p>
+            
+            <img src="bigboss.jpg" alt="profile icon" width="80rem">
+            <p><strong style="font-size: x-large;">Ricky Reels</strong> (@richardjreels)</p>
+            
         </div>
         <div class="head4">
             <button type="button">New</button>
@@ -196,7 +198,7 @@
 
 
         <div class="mainRightDiv">
-            <div id="announcements" class="card">
+            <div class="card">
             <div>
                 <h5>Announcing</h5>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A repellat, amet aspernatur iste eveniet tempora dolorum dolore repellendus similique adipisci ipsum expedita libero, voluptas labore doloribus excepturi est totam? Inventore!</p>
@@ -212,7 +214,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A repellat, amet aspernatur iste eveniet tempora dolorum dolore repellendus similique adipisci ipsum expedita libero, voluptas labore doloribus excepturi est totam? Inventore!</p>
             </div>
             </div>
-            <div id="trending" class="card">
+            <div class="card">
                 <div>
                     <h5>Trend</h5>
                     <p>some real shit</p>
