--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     <div class="sidebar">
 
         <!-- <div class="sidebarContents"> -->
-        <div class="sidebarTitle"><img src="dashboard.svg"><p><strong>Dashboard</strong></p></div>
+            <a href="#"><div class="sidebarTitle"><img src="dashboard.svg"><p><strong>Dashboard</strong></p></div></a>
         <ul class="sidebarUL1">            
-            <img src="home.svg"><li>Home</li>
-            <img src="badge.svg"><li>Profile</li>
-            <img src="forum.svg"><li>Messages</li>
-            <img src="history.svg"><li>History</li>
-            <img src="task.svg"><li>Tasks</li>
-            <img src="groups.svg"><li>Communities</li>
+            <a href="#"><img src="home.svg"></a><a href="#"><li>Home</li></a>
+            <a href="#"><img src="badge.svg"></a><a href="#"><li>Profile</li></a>
+            <a href="#"><img src="forum.svg"></a><a href="#"><li>Messages</li></a>
+            <a href="#"><img src="history.svg"></a><a href="#"><li>History</li></a>
+            <a href="#"><img src="task.svg"></a><a href="#"><li>Tasks</li></a>
+            <a href="#"><img src="groups.svg"></a><a href="#"><li>Communities</li></a>
         </ul>
         <ul class="sidebarUL2">
-            <img src="settings.svg"><li>Settings</li>
-            <img src="help.svg"><li>Support</li>
-            <img src="security.svg"><li>Privacy</li>
+            <a href="#"><img src="settings.svg"></a><a href="#"><li>Settings</li></a>
+            <a href="#"><img src="help.svg"></a><a href="#"><li>Support</li></a>
+            <a href="#"><img src="security.svg"></a><a href="#"><li>Privacy</li></a>
         </ul>
         <!-- </div> -->
     </div>
@@ -35,25 +35,24 @@
     <div class="header">
         <div class="head1">
             <form action=#>
-                <button type="submit"><img src="search.svg" alt="search icon button"></button>
+                <a href="#"><button type="submit"><img src="search.svg" alt="search icon button"></button></a>
                 <input type="text" placeholder="Search..." name="search">
               </form>
         </div>
         <div class="head2">
-            <img src="notification.svg" alt="notification icon">
-            <img src="bigboss.jpg" alt="profile icon" width="50rem">
-            <h5>Ricky Reels</h5>
+            <a href="#"><img src="notification.svg" alt="notification icon"></a>
+            <a href="#"><img src="bigboss.jpg" alt="profile icon" width="50rem"></a>
+            <a href="#"><h5>Ricky Reels</h5></a>
         </div>
-        <div class="head3">
-            
-            <img src="bigboss.jpg" alt="profile icon" width="80rem">
-            <p><strong style="font-size: x-large;">Ricky Reels</strong> (@richardjreels)</p>
+        <div class="head3">            
+            <a href="#"><img src="bigboss.jpg" alt="profile icon" width="80rem"></a>
+            <a href="#"><p><strong style="font-size: x-large;">Ricky Reels</strong> (@richardjreels)</p></a>
             
         </div>
         <div class="head4">
-            <button type="button">New</button>
-            <button type="button">Upload</button>
-            <button type="button">Share</button>
+            <a href="#"><button type="button">New</button></a>
+            <a href="#"><button type="button">Upload</button></a>
+            <a href="#"><button type="button">Share</button></a>
         </div>
     </div>
 
@@ -66,9 +65,9 @@
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
                 <div class="cardIcons">
-                    <img src="checkcircle.svg" alt="complete task icon">
-                    <img src="heart.svg" alt="favorite icon">
-                    <img src="share.svg" alt="share icon">
+                    <a href="#"><a href="#"><img src="checkcircle.svg" alt="complete task icon"></a></a>
+                    <a href="#"><img src="heart.svg" alt="favorite icon"></a>
+                    <a href="#"><img src="share.svg" alt="share icon"></a>
                 </div>
             </div>
 
@@ -77,9 +76,9 @@
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
                 <div class="cardIcons">
-                    <img src="checkcircle.svg" alt="complete task icon">
-                    <img src="heart.svg" alt="favorite icon">
-                    <img src="share.svg" alt="share icon">
+                    <a href="#"><img src="checkcircle.svg" alt="complete task icon"></a>
+                    <a href="#"><img src="heart.svg" alt="favorite icon"></a>
+                    <a href="#"><img src="share.svg" alt="share icon"></a>
                 </div>
             </div>
 
@@ -88,9 +87,9 @@
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
                 <div class="cardIcons">
-                    <img src="checkcircle.svg" alt="complete task icon">
-                    <img src="heart.svg" alt="favorite icon">
-                    <img src="share.svg" alt="share icon">
+                    <a href="#"><img src="checkcircle.svg" alt="complete task icon"></a>
+                    <a href="#"><img src="heart.svg" alt="favorite icon"></a>
+                    <a href="#"><img src="share.svg" alt="share icon"></a>
                 </div>
             </div>
 
@@ -99,9 +98,9 @@
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
                 <div class="cardIcons">
-                    <img src="checkcircle.svg" alt="complete task icon">
-                    <img src="heart.svg" alt="favorite icon">
-                    <img src="share.svg" alt="share icon">
+                    <a href="#"><img src="checkcircle.svg" alt="complete task icon"></a>
+                    <a href="#"><img src="heart.svg" alt="favorite icon"></a>
+                    <a href="#"><img src="share.svg" alt="share icon"></a>
                 </div>
             </div>
 
@@ -110,9 +109,9 @@
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
                 <div class="cardIcons">
-                    <img src="checkcircle.svg" alt="complete task icon">
-                    <img src="heart.svg" alt="favorite icon">
-                    <img src="share.svg" alt="share icon">
+                    <a href="#"><img src="checkcircle.svg" alt="complete task icon"></a>
+                    <a href="#"><img src="heart.svg" alt="favorite icon"></a>
+                    <a href="#"><img src="share.svg" alt="share icon"></a>
                 </div>
             </div>
 
@@ -121,9 +120,9 @@
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
                 <div class="cardIcons">
-                    <img src="checkcircle.svg" alt="complete task icon">
-                    <img src="heart.svg" alt="favorite icon">
-                    <img src="share.svg" alt="share icon">
+                    <a href="#"><img src="checkcircle.svg" alt="complete task icon"></a>
+                    <a href="#"><img src="heart.svg" alt="favorite icon"></a>
+                    <a href="#"><img src="share.svg" alt="share icon"></a>
                 </div>
             </div>
 
@@ -132,9 +131,9 @@
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
                 <div class="cardIcons">
-                    <img src="checkcircle.svg" alt="complete task icon">
-                    <img src="heart.svg" alt="favorite icon">
-                    <img src="share.svg" alt="share icon">
+                    <a href="#"><img src="checkcircle.svg" alt="complete task icon"></a>
+                    <a href="#"><img src="heart.svg" alt="favorite icon"></a>
+                    <a href="#"><img src="share.svg" alt="share icon"></a>
                 </div>
             </div>
 
@@ -143,9 +142,9 @@
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
                 <div class="cardIcons">
-                    <img src="checkcircle.svg" alt="complete task icon">
-                    <img src="heart.svg" alt="favorite icon">
-                    <img src="share.svg" alt="share icon">
+                    <a href="#"><img src="checkcircle.svg" alt="complete task icon"></a>
+                    <a href="#"><img src="heart.svg" alt="favorite icon"></a>
+                    <a href="#"><img src="share.svg" alt="share icon"></a>
                 </div>
             </div>
 
@@ -154,9 +153,9 @@
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
                 <div class="cardIcons">
-                    <img src="checkcircle.svg" alt="complete task icon">
-                    <img src="heart.svg" alt="favorite icon">
-                    <img src="share.svg" alt="share icon">
+                    <a href="#"><img src="checkcircle.svg" alt="complete task icon"></a>
+                    <a href="#"><img src="heart.svg" alt="favorite icon"></a>
+                    <a href="#"><img src="share.svg" alt="share icon"></a>
                 </div>
             </div>
 
@@ -165,9 +164,9 @@
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
                 <div class="cardIcons">
-                    <img src="checkcircle.svg" alt="complete task icon">
-                    <img src="heart.svg" alt="favorite icon">
-                    <img src="share.svg" alt="share icon">
+                    <a href="#"><img src="checkcircle.svg" alt="complete task icon"></a>
+                    <a href="#"><img src="heart.svg" alt="favorite icon"></a>
+                    <a href="#"><img src="share.svg" alt="share icon"></a>
                 </div>
             </div>
 
@@ -176,9 +175,9 @@
                 <h5>Card Title</h5>
                 <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, vero. Cum dolorum quia perferendis mollitia illo exercitationem, voluptates asperiores, ea distinctio eos neque illum tempora explicabo. Recusandae cupiditate nisi placeat.</p>
                 <div class="cardIcons">
-                    <img src="checkcircle.svg" alt="complete task icon">
-                    <img src="heart.svg" alt="favorite icon">
-                    <img src="share.svg" alt="share icon">
+                    <a href="#"><img src="checkcircle.svg" alt="complete task icon"></a>
+                    <a href="#"><img src="heart.svg" alt="favorite icon"></a>
+                    <a href="#"><img src="share.svg" alt="share icon"></a>
                 </div>
             </div>
 
@@ -187,9 +186,9 @@
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
                 <div class="cardIcons">
-                    <img src="checkcircle.svg" alt="complete task icon">
-                    <img src="heart.svg" alt="favorite icon">
-                    <img src="share.svg" alt="share icon">
+                    <a href="#"><img src="checkcircle.svg" alt="complete task icon"></a>
+                    <a href="#"><img src="heart.svg" alt="favorite icon"></a>
+                    <a href="#"><img src="share.svg" alt="share icon"></a>
                 </div>
             </div>
 
