Fully working sticky navbar (and for mobile)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="sidebar">
 
-        <!-- <div class="sidebarContents"> -->
+        <div class="stickySide">
             <a href="#"><div class="sidebarTitle"><img src="dashboard.svg"><p><strong>Dashboard</strong></p></div></a>
         <ul class="sidebarUL1">            
             <a href="#"><img src="home.svg"></a><a href="#"><li>Home</li></a>
@@ -28,7 +28,7 @@
             <a href="#"><img src="help.svg"></a><a href="#"><li>Support</li></a>
             <a href="#"><img src="security.svg"></a><a href="#"><li>Privacy</li></a>
         </ul>
-        <!-- </div> -->
+        </div>
     </div>
 
     
@@ -42,7 +42,7 @@
         <div class="head2">
             <a href="#"><img src="notification.svg" alt="notification icon"></a>
             <a href="#"><img src="bigboss.jpg" alt="profile icon" width="50rem"></a>
-            <a href="#"><h5>Ricky Reels</h5></a>
+            <a href="#"><strong style="font-size: x-large;">Ricky Reels</strong></a>
         </div>
         <div class="head3">            
             <a href="#"><img src="bigboss.jpg" alt="profile icon" width="80rem"></a>
